Updated the instruction for detection test.

--- a/Spam_Email_Detector.ipynb
+++ b/Spam_Email_Detector.ipynb
@@ -26,6 +26,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## This is spam detector for E-mail. You can click on each cell individually till you reach the end of this notebook or click on \"Runtime\" and \"Run all\" from the top menu."
+      ],
+      "metadata": {
+        "id": "VYyBzZjRzJKZ"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 6,
       "metadata": {
@@ -42,7 +51,6 @@
         "from sklearn.metrics import confusion_matrix\n",
         "from io import StringIO\n",
         "import requests\n",
-        "\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "\n"
@@ -55,7 +63,6 @@
         "url = \"https://raw.githubusercontent.com/SegunDave/CapstoneProject/main/email_classification.csv\"\n",
         "response = requests.get(url)\n",
         "data = StringIO(response.text)\n",
-        "\n",
         "raw_mail = pd.read_csv(data)\n",
         "print(raw_mail)\n",
         "\n",
@@ -918,7 +925,8 @@
         "    \"You've won a $1000 gift card. Click here to claim your prize!\",  # Spam\n",
         "    \"Meeting at 3 PM today. Please bring the latest project updates.\",  # Ham\n",
         "    \"Urgent: Your account has been compromised. Please reset your password immediately.\",  # Spam\n",
-        "    \"Happy Birthday! Wishing you a fantastic day filled with joy and happiness.\"  # Ham\n",
+        "    \"Happy Birthday! Wishing you a fantastic day filled with joy and happiness.\", # Ham\n",
+        "    #\"Please click on the link below to win 1000 dollars from Nigerian Prince.\"# ????\n",
         "]\n",
         "\n",
         "# Known labels for these emails (0 = Spam, 1 = Ham)\n",
@@ -944,9 +952,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "422c2aa5-d00d-4db2-f9f7-00de6a6c9790"
+        "outputId": "a78917da-86ed-4f2a-eace-8287b17e14f7"
       },
-      "execution_count": 18,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -957,8 +965,8 @@
             "Email: You've won a $1000 gift card. Click here to claim your prize! [Spam]\n",
             "Email: Meeting at 3 PM today. Please bring the latest project updates. [Ham]\n",
             "Email: Urgent: Your account has been compromised. Please reset your password immediately. [Spam]\n",
-            "Email: Happy Birthday! Wishing you a fantastic day filled with joy and happiness. [Ham]\n",
-            "Model Accuracy: 100.00%\n"
+            "Email: Please click on the link below to win 1000 dollars from Nigerian Prince. [Ham]\n",
+            "Model Accuracy: 83.33%\n"
           ]
         }
       ]
