--- a/Spam_Email_Detector.ipynb
+++ b/Spam_Email_Detector.ipynb
@@ -915,6 +915,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Test spam E-mail here on the model. You can edit the content in quotes from the test_input_mails variable."
+      ],
+      "metadata": {
+        "id": "hqybf71A3whx"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Array of test email contents and their true labels for testing accuracy (these emails are not from the dataset used to train the model)\n",
@@ -926,8 +935,7 @@
         "    \"Meeting at 3 PM today. Please bring the latest project updates.\",  # Ham\n",
         "    \"Urgent: Your account has been compromised. Please reset your password immediately.\",  # Spam\n",
         "    \"Happy Birthday! Wishing you a fantastic day filled with joy and happiness.\", # Ham\n",
-        "    #\"Please click on the link below to win 1000 dollars from Nigerian Prince.\"# ????\n",
-        "]\n",
+        "\n",
         "\n",
         "# Known labels for these emails (0 = Spam, 1 = Ham)\n",
         "known_labels = [0, 1, 0, 1, 0, 1]\n",
@@ -952,9 +960,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a78917da-86ed-4f2a-eace-8287b17e14f7"
+        "outputId": "6557edf8-307b-499b-ea45-ab944f9bbcc6"
       },
-      "execution_count": 26,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -965,8 +973,8 @@
             "Email: You've won a $1000 gift card. Click here to claim your prize! [Spam]\n",
             "Email: Meeting at 3 PM today. Please bring the latest project updates. [Ham]\n",
             "Email: Urgent: Your account has been compromised. Please reset your password immediately. [Spam]\n",
-            "Email: Please click on the link below to win 1000 dollars from Nigerian Prince. [Ham]\n",
-            "Model Accuracy: 83.33%\n"
+            "Email: Happy Birthday! Wishing you a fantastic day filled with joy and happiness. [Ham]\n",
+            "Model Accuracy: 100.00%\n"
           ]
         }
       ]
